# amoeboid-movement-curvature

./: README.md
code/amoeba/: Cargo.toml  run.sh
code/amoeba/src/: calc_curv.rs  main.rs  main.rs.bak  main.rs.param  main.rs_parambak
code/plots/: autoc.py  autoc_plot.py  curvature_scatter.py  outlines.py  plot_curvature_2.py  plot_curvature_3.py  trajectory.py  trajectory_small.py
